# manim-compilation

./: README.md  pyproject.toml
src/manim_compilation/: __init__.py  parsing.py  utilities.py
