[tool.poetry]
name = "manim-compilation"
version = "0.0.1"
description = "Utilities for compiler design animations"
license = "MIT"
authors = ["Noam Zaks <imnoamzaks@gmail.com>"]
readme = "README.md"
repository = "https://github.com/noamzaks/manim-compilation"
classifiers= [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.6.2"
manim = ">=0.3"

[tool.poetry.plugins."manim.plugins"]
"manim_compilation" = "manim_compilation"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
